...
        context: context,
        barrierDismissible: false, // Prevent tapping outside to dismiss
        builder: (context) =>
            PopScope(
              canPop: allowPop, // Control popping with the flag
              child: AlertDialog(
                title: const Text('Complete Your Profile'),
                content: SingleChildScrollView(
                  child: Column(
                    mainAxisSize: MainAxisSize.min,
                    children: [
                    TextField(
                      key: const Key('nameField'),
                      controller: nameController,
                      decoration: const InputDecoration(labelText: 'Name', hintText: 'Name'),
                    ),
                    TextField(
                      key: const Key('ageField'),
                      controller: ageController,
                      keyboardType: TextInputType.number,
                      // Enforce numeric input
                      decoration: const InputDecoration(labelText: 'Age', hintText: 'Age'),
                      inputFormatters: [
                        FilteringTextInputFormatter.digitsOnly
                      ], // Allow only digits
                    ),
                    const Text('Select Preset Cuisine Ingredients:'),
                    StatefulBuilder(
                        builder: (context, setState) {
                          return CheckboxListTile(
                            title: const Text('Chinese'),
                            value: selectedCuisines['chinese'] ?? false,
                            onChanged: (bool? value) => setState(() => selectedCuisines['chinese'] = value!),
                          );
                        }
                    ),
                    StatefulBuilder(
...
                        );
                      },
                    ),
                    StatefulBuilder(
                      builder: (context, setState) {
                        return CheckboxListTile(
                          title: const Text('Italian'),
                          value: selectedCuisines['italian'] ?? false,
                          onChanged: (bool? value) => setState(() => selectedCuisines['italian'] = value!),
                        );
                      },
                    ),
                    StatefulBuilder(
...
                  ],
                      ),
                ),

                actions: <Widget>[
                  TextButton(
                    child: const Text('Next'),
                    onPressed: () async {
                      if (nameController.text.isEmpty ||
                          !RegExp(r'^[a-zA-Z ]+$').hasMatch(
                              nameController.text)) {
                        showDialog(
                            context: context,
...
