...
              // Buttons with Styling
              SizedBox(
                width: 200,
                child: Column(
                  children: [
                    ElevatedButton(
                      key: const ValueKey('loginButton'),
                      style: ElevatedButton.styleFrom(
                        backgroundColor: Colors.purpleAccent[100],
                      ),
                      onPressed: () {
                        Navigator.push(
                          context,
...
                        const SizedBox(width: 10),
                        Expanded(child: Divider(color: Colors.grey[600], thickness: 2)),
                      ],
                    ),
                    const SizedBox(height: 15),
                    ElevatedButton(
                      key: const ValueKey('registerButton'),
                      style: ElevatedButton.styleFrom(
                        backgroundColor: Colors.purpleAccent[100],
                      ),
                        onPressed: () {
                          Navigator.push(
                            context,
...
